--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
     "clientId":"964009700452597800",
     "guildId":"964010957124812800",
-    "token":"OTY0MDA5NzAwNDUyNTk3ODAw.YleZ_w.7HGpvywYKxyXSVqOFfADf_UzzVo"
+    "token":"OTY0MDA5NzAwNDUyNTk3ODAw.G8Ih6G.8a4vgV3vqpw38tJBpBBqmQvfaX5lks43StQwbc"
 }
