Forgot to add Procfile

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mcapi": "^1.0.1",
     "mojang-api": "^0.0.2",
     "moment": "^2.29.3",
-    "namemc": "^1.8.16"
+    "namemc": "^1.8.16",
+    "node": "^17.7.2"
   }
 }
