--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mojang-api": "^0.0.2",
     "moment": "^2.29.3",
     "namemc": "^1.8.16",
-    "node": "^17.7.2"
+    "node": "^17.7.2",
+    "steamapi": "^2.2.0"
   }
 }
