--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "moment": "^2.29.3",
     "namemc": "^1.8.16",
     "node": "^17.7.2",
+    "path": "^0.12.7",
     "steamapi": "^2.2.0"
   }
 }
