--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "namemc": "^1.8.16",
     "node": "^17.7.2",
     "path": "^0.12.7",
-    "steamapi": "^2.2.0"
+    "steamapi": "^2.2.0",
+    "undici": "^5.3.0"
   }
 }
