--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-cayman
 title: DiscTracker by BlueOrcaz and U87M
-description: Bookmark this website to keep an eye on DiscTracker's updates!
+description: Favourite/Bookmark this website to keep an eye on DiscTracker's updates!
