--- a/package.json
+++ b/package.json
@@ -23,8 +23,9 @@
     "moment": "^2.29.3",
     "namemc": "^1.8.16",
     "node": "^17.7.2",
+    "node-fetch": "^3.2.6",
     "path": "^0.12.7",
     "steamapi": "^2.2.0",
-    "undici": "^5.3.0"
+    "undici": "^5.5.1"
   }
 }
