--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "3": "^2.1.0",
     "@discordjs/builders": "^0.13.0",
     "@discordjs/rest": "^0.4.1",
+    "adapter": "^1.0.0-beta.10",
     "axios": "^0.27.2",
+    "axios-cache": "^1.2.0",
+    "axios-cache-adapter": "^2.7.3",
     "discord-api-types": "^0.31.2",
     "discord.js": "^13.8.1",
     "discord.js-commando": "^0.12.3",
